# Arena

./: .env.example  .gitignore  AGENTS.md  BOT-GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE-SDKS  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  arena  deploy-webhook.py  deploy-webhook.service  docker-compose.beta.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
backlog/: README.md  config.yml
docs/: README.md  architecture.md  build-and-deploy.md  combat-animation-plan.md  cosmetics-and-monetization.md  frontend-performance.md  platform-authority.md  settings-system.md
examples/: admin_example.py
frontend/: character-lab.html  debug.html  debug2.html  index.html  llms.txt  robots.txt  sitemap.xml
go-arena/: Dockerfile  go.mod  go.sum
scripts/: build-babylon-runtime.mjs  check-admin-inline-js.mjs  dev-server.ps1  test-admin-broadcast-ui.mjs  test-admin-connection-diagnostics.mjs  test-admin-cosmetics-ui.mjs  test-admin-sse-parser.mjs  test-admin-sse-reconnect.mjs  test-arena-brand-lockup.mjs  test-body-form-renderer.mjs  test-body-form-roster.mjs  test-character-animations.mjs  test-character-renderer-integration.mjs  test-character-roster.mjs  test-character-shop.mjs  test-cosmetics-shop.mjs  (+43 more)
sdk/python/: pyproject.toml
sdk/python/arena_sdk/: __init__.py  bot.py  helpers.py
sdk/python/examples/: berserker.py  hunter.py  scavenger.py  smart_bot.py  sniper.py  turtle.py
sdk/python/tests/: test_action_helpers.py  test_connection.py  test_resilience.py
(+456 files in other folders)
