[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-bot-sdk"
version = "0.1.0"
description = "Python SDK for AI Battle Arena bots"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["websockets>=12.0", "aiohttp>=3.9"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/ablac/Arena"
Repository = "https://github.com/ablac/Arena"
